<resources>
    <string name="app_name">MbnTask</string>
    <string name="welcome">Welcome</string>
    <string name="please_choose_your_role">Please choose your role</string>
    <string name="user">User</string>
    <string name="representative">ٌRepresentative</string>
    <string name="store_owner">Store Owner</string>
    <string name="mobile">Mobile</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="don_t_have_an_account">Don\'t have an account ?</string>
    <string name="sign_up">Sign up</string>
    <string name="now_register_your_account">Now register your account</string>
    <string name="email">Email</string>
    <string name="address">Address</string>
    <string name="city_id">city ID</string>
    <string name="name">Name</string>
    <string name="signup">Signup</string>
    <string name="already_have_an_account">Already have an account ?</string>
    <string name="login_now">Login Now</string>
    <string name="required">Required</string>
</resources>